angularFramework/app/styles/main.css
@font-face:url(http://fonts.googleapis.com/earlyaccess/opensanshebrew.css);

.scenarioPlayEditTrashBtn
{
display:inline-block;
background-color:white;
border:1px solid #DCB601;
margin-top:-10px;
  border-radius: 100px 100px 100px 100px;
  width:28px;
  height:28px;

 }
.scenarioPlayEditTrashBtn:hover {
     display:block;
background-color:#DCB601;
border:1px white solid;
}
.btnGroup
{
    display:block;
    cursor:pointer;
   margin-top: -56px;
  position: absolute;
  margin-right: -30px;

 }
.scenarioPlayEditTrashGlyph {
   margin-right: 7px;
  margin-top: 5px;
  color: #DCB601;
    display:block;

 
}
.scenarioPlayEditTrashGlyph:hover {
      display:block;

    color:white;
    }
.sceneHover
{
border:2px solid #58585A;
height:800px;
          }
.sceneHover:hover
{
border:2px solid yellow;

}
.ourModal .modal-content{
              background-color:yellow;

          }

.myUserQueAndDistractorCollapseClass
          {

              margin-top:70px;
          }
.myUserDistractorClass{
              background-color:black;
               color: white;
               display:block;
               text-align:right;
               margin-top:5px;
               width:200px;
              
          }
.myUserDistractorClass:hover {
background-color:green;

color: white;
}
h3 {
color:white;
padding-right:40px;
}
#questionBack  {
    background-image: url('../images/interactionDiv.png');
  width: 290px;
  margin-top: -565px;
  /* z-index: 9; */
  position: absolute;
  height: 560px;
 
 font-family:'Open Sans Hebrew';

}

.arrow{
    height:5px;
    background-color:black;
    /*position:absolute;*/
    margin-top:30px;
}


.arrowHead {
               width:13px;
    height:16px;
background-image: url('../images/ArrowLeftDir.png');

    position: absolute;
  margin-top:23px;

}
.isRightArrow .arrowHead {
          width:13px;
    height:16px;
background-image: url('../images/ArrowRightDir.png');

    position: absolute;
  margin-top: 23px;

}
.myOpeningTextClass {
display:none;}
.isFirstScenario .myOpeningTextClass  {
display:block;
}

.arrow {
    height: 2px;
    background-color: black;
    position: absolute;
    margin-top: 30px;
}

.glyphicon.glyphicon-one-fine-full-dot {
    margin-bottom: -.8em;
    overflow: hidden;
}
.glyphicon.glyphicon-one-fine-full-dot:before {
    content:"\25cf";
    font-size: 3em;
}
.glyphicon.glyphicon-one-fine-empty-dot {
    margin-bottom: -.8em;
    overflow: hidden;
}
.glyphicon.glyphicon-one-fine-empty-dot:before {
    content:"\25cb";
    font-size: 3em;
}
.myeditMovGlyphicon {
  font-size: 15px;
  margin-right: 89px;


}
.myDeleyeglyphicon {
          /*background-image: url('../images/delete_ico.png');*/
    /*width: 17px;
    height: 19px;*/
    /*background-repeat:no-repeat;*/
    cursor:pointer;
    font-size:20px;
      margin-top: 8px;
  margin-right: 5px;
}
.myDeleyeglyphicon:hover {
color:#58585A;
}
.myYoutubeIfreamPreview
{
border:1px #58585A solid;
        margin-right:89px;
             width:400px;
    height:200px;
}
/*.ScenarioBTNClass:hover {
    float:left;
      background-image: url('../images/addScenarioBTNH.png');
    width: 120px;
    height: 110px;
}*/
.playBtnClass {
    /*background-image:url('../images/playPriv.png');*/
    background-color:black;
    opacity:0.4;
        width:116px;
    height:90px;
    position: absolute;
  margin-top: -90px;
  cursor:pointer;
}
.playBtnClass:hover {
    /*background-image: url('../images/playPriv_H.png');*/
    background-color:black;
    opacity:0.4;
    width: 116px;
    height: 90px;
}
.myPlayCircleGlyphiconClass {
color:white;
font-size:40px;
  margin-right: 40px;
  margin-top: 25px;
}
.myPlayCircleGlyphiconClass:hover {
color:#e5e5e5;
}
.scenarioHolder {
width:120px;

  overflow: hidden;
    text-overflow: ellipsis; 
    white-space: nowrap; 
}
.youtubeoHolder
{
background-color:#58585A;
color:white;
padding-right:5px;
 cursor:pointer;
    width:120px;
    height: 30px;
    padding-top: 5px;
      font-size: 15px;
}
.youtubeoHolderTEXT {
   text-overflow: ellipsis; 
    white-space: nowrap; 
        overflow: hidden;
    width:90px;
    position:absolute;

}
.circle{
    /*width:14px;
    height:14px;
    background-repeat:no-repeat;
    background-image:url('../images/distractorBTN.png');*/
    position:absolute;
    z-index:2;
      /*margin-top: 20px;*/

  /*font-size:20px;*/
margin-right: -9px;
margin-top: 21px;
}

.isTrue .circle{
    /*background-image:url('../images/distractorFullBTN.png');
background-repeat:no-repeat;
 width:14px;
    height:14px;
 border-style:none;*/
 position:absolute;
    z-index:2;
     /*font-size:20px;*/
     color:#E9C001;
margin-right: -9px;
margin-top: 21px;
}
  .tooltip.customClass {
                color: #880000;
                background-color: #ffff66;
                box-shadow: 0 6px 12px rgba(0,0,0,.175);
            }
 .myDistractorGlyphicon{
color:gray;
font-size:20px;
}
.myAnswersSpanClass {
    border:1px solid #A8A8B7;
    background-color:white;
    position:absolute;
    width:90px;
   white-space: nowrap; 
  height: 22px;
    overflow: hidden;
    text-overflow: ellipsis; 
  margin-top: 21px;
  cursor: pointer;
  margin-right: 8px;
  padding-right:5px;
}
.myMovTumb {
margin-right:36px;
cursor:pointer;
z-index:3;
  position:absolute;
  margin-top:-13px;

}
.myPlusGlyphicon {
background-color: white;
  font-size: 24px;
  width: 50px;
  height: 50px;
  padding-top: 12px;
  padding-right: 11px;
  margin-right: 34px;
  margin-top: 332px;
  display: block;
  border: 2px solid;
  border-radius: 30px 30px 30px 30px;
  cursor: pointer;
  position: absolute;
  z-index: 44;
}
.myPlusGlyphicon:hover {
    
    color:yellow;
    border:2px solid yellow;

}
.myPancilGlyphicon {
background-color: white;
  font-size: 24px;
  width: 50px;
  height: 50px;
  padding-top: 12px;
  padding-right: 11px;
  margin-right: 34px;
  margin-top: 332px;
  display: block;
  border: 2px solid;
  border-radius: 30px 30px 30px 30px;
  cursor: pointer;
  position: absolute;
  z-index: 44;
}

.isChangeColor.myPancilGlyphicon {
    
    color:yellow;
    border:yellow 2px solid;
    margin-right:50px;
    }
.myLinkGlyphicon {
  background-color: black;
  color: white;
  font-size: 25px;
  width: 50px;
  height: 50px;
  padding-top: 13px;
  padding-right: 10px;
  margin-right: 34px;
  margin-top: 332px;
  display: block;
  border: 2px solid black;
  border-radius: 30px 30px 30px 30px;
  cursor: pointer;
  position: absolute;
  z-index: 44;
}
.myAnswersLinkSpanClass {
        cursor:pointer;
           position:absolute;
    z-index:3;
      border:1px solid #A8A8B7;
    background-color:white;
   margin-right: 97px;
  margin-top: 21px;
       background-image:url('../images/linkBTN.png');
        width: 22px;
  height: 22px;
   background-repeat:no-repeat;
  
}
  
.myDistractorBTNClass {
cursor:pointer;
list-style:none;
margin-right:20px;
 margin-top:5px;
 
}
.myDistractorPollClass {
  width: 2px;
  background-color: #A8A8B7;
  position: absolute;
  margin-top: -45px;
  margin-right: -2px;
  z-index: 0;
}
.isChangeColor.myDistractorPollClass {
  width: 2px;
  background-color: yellow;
  position: absolute;
  margin-top: -45px;
  margin-right: -2px;
  z-index: 0;

}
/*.lilachTraying {

background-color:red;

}*/
.freezLine {
background-color:#e5e5e5;
  padding-top: 19px;
  height: 188px;
white-space: nowrap;
width:1432px;


}
.mainMoviesDiv> li {
    display:inline-block;
    /*background-color:blue;*/
    width:116px;
    margin-right:10px;

}

.addScenarioBTNClass {
    /*float:left;*/
      background-image: url('../images/addScenarioBTN.png');
    width: 120px;
    height: 110px;
     cursor:pointer;
     margin-top:0px;
     z-index:33333;
     position:absolute;
}
    .addScenarioBTNClass:hover {
          background-image: url('../images/addScenarioBTNH.png');
 
    }
.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
font-family:'Open Sans Hebrew';
  padding: 0;
 /*direction:rtl;*/
 
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 10px;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;

}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

 /*Responsive: Portrait tablets and up*/ 
@media screen and (min-width: 768px) {
  .container {

    /*max-width: 730px;*/
    width:100%;
        /*white-space: nowrap;*/

  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

